# KalshiBot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: approved_market_pairs.json  market_pairs.example.json  spain_saudi_pairs.json  world_cup_pairs.json
data/: discovered_market_matches.json
docs/specs/: spec_notes.md  strategy_variant_engine.md  strategy_variant_engine_tasks.md
logs/: approved_market_pairs.json  discovery_matches.json
src/kalshibot/: __init__.py  analysis.py  auth.py  backtest.py  cli.py  client.py  config.py  defaults.py  fees.py  market_matcher.py  market_urls.py  monitor.py  paper.py  paper_storage.py  polymarket.py  signals.py  spreads.py  storage.py  utils.py
src/kalshibot/backtesting/: __init__.py  backfill.py  models.py  simulation.py  storage.py
src/kalshibot/commands/: discovery.py  history.py  polymarket.py  runtime.py  trading.py
src/kalshibot/discovery/: __init__.py  candidates.py  embeddings.py  flow.py  models.py  normalization.py  profiles.py  queries.py  scoring.py  service.py  sizing.py  sources.py  taxonomy.py  utils.py  validation.py
src/kalshibot/monitoring/: __init__.py  fetch.py  formatting.py  heartbeat.py  models.py  observations.py  output.py  persistence.py  results.py  scheduling.py
src/kalshibot/paper/: __init__.py  logging.py  models.py  pricing.py  reporting.py  repository.py
src/kalshibot/runtime/: active_pairs.py  (+2 more)
tests/: test_auth.py  test_backtest.py  test_discovery.py  test_market_matcher.py  test_monitor.py  test_polymarket.py  test_runtime.py  test_spreads.py  test_strategies.py
(+13 files in other folders)
