[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshibot"
version = "0.1.0"
description = "Small Python starter bot for the Kalshi API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
discovery = [
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
kalshibot = "kalshibot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
